# rustOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  build_module.sh  initrd.tar  linker.ld  module-linker.ld  rust-toolchain  todo  x
.cargo/: config.toml
initrd/: hello.kmod
kernel/: Cargo.toml
kernel/devices/src/: lib.rs
kernel/devices/src/serial/: pl011_uart.rs
kernel/src/: cpu.rs  device_tree.rs  disks.rs  error.rs  kernel.rs  lib.rs  logger.rs  main.rs  psci.rs  scheduler.rs  symbols.rs  timer.rs
kernel/src/acpi/: madt.rs  mod.rs  rsdp.rs  sdt.rs  spcr.rs
kernel/src/bus/: pcie.rs
kernel/src/bus/pcie/: capabilities.rs  mod.rs
kernel/src/devices/: mod.rs
kernel/src/devices/interrupts/: mod.rs
kernel/src/devices/interrupts/gic_v2/: cpu_interface.rs  distributor.rs  mod.rs  msi.rs  regs.rs
kernel/src/devices/serial/: pl011_uart.rs
kernel/src/fs/: block.rs  devfs.rs  drivers.rs  initrd.rs  mod.rs  mount.rs  open.rs  path.rs  utils.rs  vfs.rs
kernel/src/fs/vfs/: funcs.rs  mod.rs  node.rs
kernel/src/interrupts/: asm.S  exceptions.rs  gic.rs  interrupts.rs  mod.rs
kernel/src/interrupts/gic/: cpu_interface.rs  distributor.rs  regs.rs
kernel/src/memory/: addr_space.rs  address.rs  constants.rs  dma.rs  heap.rs  mmu.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/modules/: loader.rs  mod.rs
kernel/src/scheduler/: ap_start.S  consts.rs  funcs.rs  process.rs  smp.rs  sync_ref.rs  thread.rs
kernel/src/sync/: mod.rs  no_irq_locks.rs  wait_condition.rs  wait_map.rs  wait_queue.rs
kernel/src/utils/: buffer.rs  byte_size.rs  mod.rs  no_irq_locks.rs  sizes.rs  smart_ptr.rs  sync_once_cell.rs
libs/module/: Cargo.toml  build.rs
libs/module/macros/: Cargo.toml
libs/module/macros/src/: lib.rs
libs/module/src/: defs.rs  heap.rs  lib.rs
loader/: Cargo.toml  build.rs  memory_map.txt
loader/.cargo/: config.toml
loader/src/: main.rs
loader/src/cpu/: mod.rs
loader/src/memory/: mmu.rs  mod.rs
modules/ext2/: Cargo.toml
modules/ext2/src/: consts.rs  driver.rs  filesystem.rs  icache.rs  lib.rs  nodes.rs  structs.rs
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
modules/nvme/: Cargo.toml
modules/nvme/src/: cmd.rs  device.rs  identify.rs  lib.rs  namespace.rs  queues.rs  regs.rs
root/: boot.efi  dtb.dtb  initrd  kernel
root/debug/: boot.efi  initrd  kernel
root/release/: boot.efi  kernel
scripts/: create_ksymbols.sh
targets/: aarch64-kernel.json  aarch64-modules.json
tools/builder/: Cargo.toml
tools/builder/src/: error.rs  main.rs
tools/builder/src/actions/: action.rs  ar.rs  cargo.rs  command.rs  elf.rs  fs.rs  mod.rs  module.rs  noop.rs  tar.rs
tools/module-postlinker/: Cargo.toml
tools/module-postlinker/src/: got.rs  lib.rs  logic.rs  main.rs  plt.rs
