[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features=["release_max_level_trace"] }
uefi = { version = "0.16.0", features = [] }
static_assertions = "1.1.0"
cfg-if = "1.0.0"
modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
spin = "0.9.4"
num-traits = {version = "0.2", default-features = false }
num-derive = "0.3"

tock-registers = "0.8"
cortex-a = "8.0"  

[features]
default = ["qemu_debug"]
qemu_debug = []
