[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/kernel.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
log = { workspace = true }
uefi = { version = "0.16.0", features = [] }
static_assertions = "1.1.0"
cfg-if = "1.0.0"
modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
spin = "0.9.4"
lock_api = "0.4"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
crossbeam-utils = { version = "0.8.12", default-features = false }
elf = { version = "0.7.0", default-features = false }

tock-registers = "0.8"
cortex-a = "8.0"
hashbrown = "0.13.2"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
bitflags = "1.3.2"

[features]
default = ["qemu_debug", "logger_cpu_id"]
qemu_debug = []
logger_cpu_id = []
