[package]
name = "ext2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../../kernel" }
log = { workspace = true }
spin = "0.10.0"
static_assertions = "1.1.0"
hashbrown = "0.16.1"
