[package]
name = "nvme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
kernel = { path = "../../kernel" }
tock-registers = "0.8"
spin = "0.9.4"
static_assertions = "1.1.0"
hashbrown = "0.13.2"
cortex-a = "8.0"
