[package]
name = "nvme"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
kernel = { path = "../../kernel" }
tock-registers = "0.10"
spin = "0.10.0"
static_assertions = "1.1.0"
hashbrown = "0.16.1"
