[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
ar = "0.9.0"
cargo_toml = "0.14.0"
console = "0.15.5"
indicatif = "0.17.3"
lazy_static = "1.4.0"
module-postlinker = { version = "0.1.0", path = "../module-postlinker" }
object = "0.30.3"
tar = "0.4.38"
