[package]
name = "builder"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
ar = "0.9.0"
cargo_toml = "0.22.3"
clap = { version = "4.3.8", features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.3"
lazy_static = "1.4.0"
module-postlinker = { version = "0.1.0", path = "../module-postlinker" }
object = "0.38.0"
tar = "0.4.38"
